--- a/hardhat/package.json
+++ b/hardhat/package.json
@@ -18,6 +18,7 @@
     "hardhat": "^2.8.3"
   },
   "dependencies": {
+    "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@openzeppelin/contracts": "^4.4.2",
     "dotenv": "^14.2.0"
   }
